# auto-y-govno

./: CMakeLists.txt
src/: main.cpp  main.h  plugin.cpp  plugin.h
src/config/: config.cpp  config.h
src/d3d9/: d3dhook.cpp  d3dhook.h  keyhook.cpp  keyhook.h
src/imgui/: imgui_sdraw.cpp  imgui_sdraw.h
